--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ fbq('track', 'Lead');
 <div style="outline: none;" id="col-full-177" class="col-md-12 innerContent col_left" data-col="full" data-trigger="none" data-animate="fade" data-delay="500" data-title="full column">
 <div class="col-inner bgCover  noBorder borderSolid border3px cornersAll radius0 shadow0 P0-top P0-bottom P0H noTopMargin">
 <div style="outline: none; cursor: pointer;" class="de elBTN elAlign_center elMargin0 ui-droppable de-editable" id="tmp_button-85389" data-de-type="button" data-de-editing="false" data-title="sign up button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" aria-disabled="false" data-elbuttontype="1">
-<a href="https://www.appon.club" onClick="onClick()" class="elButton elButtonColor1 elButtonFull elButtonSize2 elButtonBottomBorder ea-buttonRocking" style="color: rgb(255, 255, 255); background-color: rgb(0, 194, 16);">
+<a href="https://www.appon.club" onClick()" class="elButton elButtonColor1 elButtonFull elButtonSize2 elButtonBottomBorder ea-buttonRocking" style="color: rgb(255, 255, 255); background-color: rgb(0, 194, 16);">
 <span class="elButtonMain"><i class="fa fa_prepended fas fa-arrow-circle-right"></i> Click Here - Show Me The Presentation</span>
 <span class="elButtonSub">&amp; Please let me know more about this after dinner ritual</span>
 </a>
@@ -460,7 +460,7 @@ fbq('track', 'Lead');
 <div class="col-inner bgCover  noBorder borderSolid border3px cornersAll radius0 shadow0 P0-top P0-bottom P0H noTopMargin" style="padding: 0 10px">
 <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_paragraph-18902" data-de-type="headline" data-de-editing="false" data-title="Paragraph" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 55px; outline: none; cursor: pointer;" aria-disabled="false">
 <div class="ne elHeadline hsSize1 lh5 elMargin0 elBGStyle0 hsTextShadow0" data-bold="inherit" style="text-align: left; font-size: 12px;" data-gramm="false" contenteditable="false">
-<a href="https://www.appon.club" onClick="onClick()" id="link-62294" class="" target="_parent" rel="noopener noreferrer" style="color: rgb(232, 235, 237);">Home&nbsp; </a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://github.blog/" id="link-57042" class="" target="_parent" rel="noopener noreferrer" style="color: rgb(232, 235, 237);">Blog&nbsp;</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://support.github.com/" id="link-12352" class="" target="_parent" rel="noopener noreferrer" style="color: rgb(232, 235, 237);">Contact Us</a>
+<a href="https://www.appon.club" onClick=" id="link-62294" class="" target="_parent" rel="noopener noreferrer" style="color: rgb(232, 235, 237);">Home&nbsp; </a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://github.blog/" id="link-57042" class="" target="_parent" rel="noopener noreferrer" style="color: rgb(232, 235, 237);">Blog&nbsp;</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://support.github.com/" id="link-12352" class="" target="_parent" rel="noopener noreferrer" style="color: rgb(232, 235, 237);">Contact Us</a>
 </div>
 </div>
 </div>
