--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ Take this short quiz to see if it will work for you</i></h2>
 <div class="ne elHeadline hsSize1 lh5 elMargin0 elBGStyle0 hsTextShadow0" data-bold="inherit" style="text-align: center; color: rgb(255, 255, 255);" data-gramm="false" contenteditable="false">(or scroll down to read my story first 😊)</div>
 </div><br>
 
-<center><a href="https://www.appon.club" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(225, 159, 40); font-size: 26px;" rel="noopener noreferrer">
+<center><a href="https://www.appon.club" onClick()" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(225, 159, 40); font-size: 26px;" rel="noopener noreferrer">
 <span class="elButtonMain">Click Here To SKIP the Quiz!</span>
 <span class="elButtonSub">..... & Start Your Transformation </span>
 </a></center>
@@ -697,7 +697,7 @@ if(searchKeyWordUrl)
 <div class="ne elHeadline hsSize1 lh5 elMargin0 elBGStyle0 hsTextShadow0" data-bold="inherit" style="text-align: center; font-size: 20px;" data-gramm="false" contenteditable="false"><i>If you are a little like me and you don't fancy taking an online quiz, please click the button below and learn all about the strange ritual that changed our lives. Watch The Presentation Below.</i></div>
 </div>
 <div class="de elBTN elAlign_center elMargin0 ui-droppable de-editable" id="tmp_button-27315" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer; font-family: &quot;Fjalla One&quot;, Helvetica, sans-serif !important;" data-google-font="Fjalla+One" aria-disabled="false">
-<a href="https://www.appon.club" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(225, 159, 40); font-size: 26px;" rel="noopener noreferrer">
+<a href="https://www.appon.club" onClick()" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(225, 159, 40); font-size: 26px;" rel="noopener noreferrer">
 <span class="elButtonMain">Click Here To SKIP the Quiz!</span>
 <span class="elButtonSub">..... & Start Your Transformation </span>
 </a>
@@ -723,7 +723,7 @@ if(searchKeyWordUrl)
 </div>
 <div class="de elHeadlineWrapper ui-droppable de-editable" id="headline-49416" data-de-type="headline" data-de-editing="false" data-title="headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 40px; outline: none; cursor: pointer; font-family: Lato, Helvetica, sans-serif !important;" data-google-font="Lato" aria-disabled="false">
 <div class="ne elHeadline hsSize3 lh4 elMargin0 elBGStyle0 hsTextShadow0 mfs_12" style="text-align: center; font-size: 16px; color: rgba(255, 255, 255, 0.51);" data-bold="inherit" data-gramm="false" contenteditable="false">
-<a href="https://docs.github.com/en/github/site-policy/github-privacy-statement" id="link-3126-469-691" class="" target="_blank" style="color: rgb(234, 233, 233);">Privacy Policy</a>&nbsp; &nbsp;|&nbsp; &nbsp;<a href="https://docs.github.com/en/github/site-policy/github-terms-of-service" id="link-3520-485-840" class="" target="_blank" style="color: rgb(234, 233, 233);">Terms of Service</a>&nbsp; &nbsp;|&nbsp; &nbsp;<a href="https://github.blog/" id="link-34189" class="" target="_blank" rel="noopener noreferrer" style="color: rgb(241, 241, 241);">Blog&nbsp;</a> |&nbsp; <a href="https://www.appon.club" id="link-61158" class="" target="_blank" rel="noopener noreferrer" style="color: rgb(241, 241, 241);">Home</a><div>
+<a href="https://docs.github.com/en/github/site-policy/github-privacy-statement" id="link-3126-469-691" class="" target="_blank" style="color: rgb(234, 233, 233);">Privacy Policy</a>&nbsp; &nbsp;|&nbsp; &nbsp;<a href="https://docs.github.com/en/github/site-policy/github-terms-of-service" id="link-3520-485-840" class="" target="_blank" style="color: rgb(234, 233, 233);">Terms of Service</a>&nbsp; &nbsp;|&nbsp; &nbsp;<a href="https://github.blog/" id="link-34189" class="" target="_blank" rel="noopener noreferrer" style="color: rgb(241, 241, 241);">Blog&nbsp;</a> |&nbsp; <a href="https://www.appon.club" onClick()" id="link-61158" class="" target="_blank" rel="noopener noreferrer" style="color: rgb(241, 241, 241);">Home</a><div>
 <br>© Copyright 2020 - All Rights Reserved</div>
 <div><br></div>
 <div>This site is not a part of the Facebook website or Facebook Inc. Additionally, This site is NOT endorsed by Facebook in any way. FACEBOOK is a trademark of FACEBOOK, Inc.<br>
